# integration

./: .pre-commit-config.yaml  README.md
.github/: CODEOWNERS  ops-bot.yaml
.github/actions/compute-matrix/: action.yaml
.github/workflows/: build.yaml  pr.yaml  test.yaml  trigger-breaking-change-alert.yaml
ci/: build_python.sh  check_conda_nightly_env.py  conda-pack.sh  test_conda_nightly_env.sh  use_conda_packages_from_prs.sh
ci/axis/: nightly-arm64.yaml  nightly-env-arm64.yaml  nightly-env.yaml  nightly-meta-arm64.yaml  nightly-meta.yaml  nightly.yaml  nightly.yml  release-arm64.yaml  release.yaml  release.yml  tests.yaml
ci/cpu/: build-env.sh  build-meta.sh  build-rapids-xgboost.sh  build-rapids.sh  build.sh  conda-pack.sh
ci/release/: update-version.sh
ci/stable_install/: install_and_test_conda.sh  install_and_test_pip.sh  install_and_test_uv.sh  install_rapids_doctor.sh  test_imports.sh
ci/stable_install/bootstrap/: pip.sh  uv.sh
ci/test/: cudf.sh  cugraph.sh  cuml.sh  cuspatial.sh  daskcuda.sh  integration.sh  notebooks.sh  rmm.sh
conda/recipes/: README.md  nightly-versions.yaml  rapids-notebook-env  release-versions.yaml  versions.yaml
conda/recipes/blazingsql-build-env/: meta.yaml
conda/recipes/blazingsql-notebook-env/: .meta.yaml.swp  meta.yaml
pip/rapids_dask_dependency/: pyproject.toml
recipe/: meta.yml
test/: mortgage_e2e.ipynb
test/cudf/: test_diningparty.py
test/cugraph/: test_pagerank.py
test/cuml/: test_dbscan.py  test_mnmg.py
test/dask-cudf/: test_daskcudf.py
test/dask-xgboost/: test_daskxgboost.py
(+12 files in other folders)
